2014-03-04 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.h: add ibis::bitvector::pit

2014-02-21 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp:214 neglected to set amask

2014-02-20 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: modify versions of column::searchSorted to make
	use of the function getValuesArray to work with in-memory data
	* src/iroster.cpp: in roster::icSort make use of
	column::getValuesArray when column::dataFileName can not generate
	a valid file name
	* src/qExpr.cpp: change versions of function overlap to return
	true when the two arguments do not form a valid range (the ranges
	may be invalid when the lower and upper bounds of a column has not
	been set)

2014-02-19 John Wu <John dot Wu at ACM dot org>
	* src/iapi.h, src/iapi.cpp: add functions to work with coordinates
	* src/bord.cpp: make a copy of columns from the user provided list
	of columns, becaue the destructor of ibis::part delete the columns
	it knows about
	* examples/tiapi.c: add tester for IAPI

2014-02-18 John Wu <John dot Wu at ACM dot org>
	* src/bord.h: add member variable shape to ibis::bord::column, add
	a new constructor

2014-02-17 John Wu <John dot Wu at ACM dot org>
	* src/iapi.h, src/iapi.cpp: add a new in-memory API that
	constructs query expressions through function calls (without a
	parser of strings)

2014-02-16 John Wu <John dot Wu at ACM dot org>
	* src/bord.h, src/bord.cpp: add constructor to take a list of
	columns as input

2014-02-12 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: check argument 1 (col) in the constructor of
	ibis::column::indexLock, do nothing when col == 0 (this allows a
	nil column object to be used to create an index lock, however,
	that index lock will do nothing)

2014-02-11 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp, src/idirekte.cpp: check for col being nil

2014-02-10 John Wu <John dot Wu at ACM dot org>
	* src/selectClause.cpp:397 change <= to <, the equal sign allows